<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">客非科贸</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shop_up">up</string>
    <string name="shop_down">down</string>
    <string name="buy_tip_CN">请选择支付方式</string>
    <string name="buy_tip_EN">Please select a payment method</string>
    <string name="pay_icoffice_CN">客非卡支付</string>
    <string name="pay_icoffice_EN">i_Coffice Card</string>
    <string name="pay_cash_CN">现金支付</string>
    <string name="pay_cash_EN">Cash</string>
    <string name="pay_wechat_CN">微信支付</string>
    <string name="pay_wechat_EN">weChat pay</string>
    <string name="pay_alipay_CN">支付宝支付</string>
    <string name="pay_alipay_EN">Alipay</string>
    <string name="pay_price_01">需支付</string>
    <string name="pay_price_02">元</string>
    <string name="pay_price_03">Price to pay</string>
    <string name="pay_cash_01">请将现金放入</string>
    <string name="pay_cash_02">纸币,硬币口</string>
    <string name="pay_icoffice_01">请使用</string>
    <string name="pay_icoffice_02">POS机</string>
    <string name="pay_icoffice_03">刷卡</string>
    <string name="pay_icoffice_card">客非卡</string>
    <string name="pay_wechat_01">打开微信点击右上角</string>
    <string name="pay_wechat_02">扫一扫</string>
    <string name="pay_wechat_03">将手机摄像头对准下方二维码</string>
    <string name="pay_alipay_01">请将手机靠近支付宝</string>
    <string name="pay_alipay_02">支付感应器</string>
    <string name="pay_again">再买一次</string>
    <string name="pay_success">支 付 成 功</string>
    <string name="pay_fail">支付失败</string>
    <string name="exchange_title">请输入兑奖号码</string>
    <string name="dialog_buyfail_01">S O R R Y</string>
    <string name="dialog_buyfail_02">购买超时</string>
    <string name="dialog_buyfail_03">很抱歉，购买过程超时。</string>
    <string name="dialog_buyfail_04">请重新操作。</string>
    <string name="dialog_buysuccess_01">S U C C E S S</string>
    <string name="dialog_buysuccess_02">出货成功</string>
    <string name="dialog_buysuccess_03">恭喜你，出货成功。</string>
    <string name="dialog_buysuccess_04">请取出商品。</string>
    <string name="dialog_outgoodsagain_01">再次取货</string>
    <string name="dialog_connect_net_fail_01">F A I L</string>
    <string name="dialog_connect_net_fail_02">网络异常</string>
    <string name="dialog_connect_net_fail_03">网络链接失败。</string>
    <string name="dialog_connect_net_fail_04">请稍后重试。</string>
    <string name="dialog_goods_sold_finish_01">S O R R Y</string>
    <string name="dialog_goods_sold_finish_02">售罄</string>
    <string name="dialog_goods_sold_finish_03">该商品已经售罄。</string>
    <string name="dialog_goods_sold_finish_04">请购买其他商品。</string>
    <string name="dialog_goods_price_error_01">E R R O R</string>
    <string name="dialog_goods_price_error_02">单价错误</string>
    <string name="dialog_goods_price_error_03">单价过低无法售卖。</string>
    <string name="dialog_goods_price_error_04">请购买其他商品。</string>
    <string name="dialog_avm_status_fail_01">F A I L</string>
    <string name="dialog_avm_status_fail_02">机器维护</string>
    <string name="dialog_avm_status_fail_03">机器维护中无法售卖。</string>
    <string name="dialog_avm_status_fail_04">请联系客服。</string>
    <string name="dialog_is_locked_01">F A I L</string>
    <string name="dialog_is_locked_02">系统维护</string>
    <string name="dialog_is_locked_03">系统正在维护中。</string>
    <string name="dialog_is_locked_04">请稍后购买。</string>
    <!--
    <string name="dialog_rcode_islocked_01">F A I L</string>
    <string name="dialog_rcode_islocked_02">兑换码锁定</string>
    <string name="dialog_rcode_islocked_03">兑换码被锁定中。</string>
    <string name="dialog_rcode_islocked_04">请稍后重试。</string>
    <string name="dialog_rcode_error_01">F A I L</string>
    <string name="dialog_rcode_error_02">兑换码异常</string>
    <string name="dialog_rcode_error_03">兑换码状态异常。</string>
    <string name="dialog_rcode_error_04">请稍后重试。</string>
    -->

    <string name="dialog_exchange_01">F A I L</string>
    <string name="dialog_exchange_02">领取失败</string>
    <string name="dialog_exchange_03">该商品已经领取完。</string>
    <string name="dialog_exchange_04">请稍后重试。</string>
    <string name="dialog_rcode_over_01">F A I L</string>
    <string name="dialog_rcode_over_02">领取失败</string>
    <string name="dialog_rcode_over_03">该商品已经领取完。</string>
    <string name="dialog_rcode_over_04">请领取其它商品。</string>
    <string name="dialog_waitoutgoods_01">W A I T</string>
    <string name="dialog_waitoutgoods_02">出货中</string>
    <string name="dialog_waitoutgoods_03">请至取物口取货</string>
    <string name="dialog_waitoutgoods_04"></string>
    <string name="time_task">COUNTE</string>
    <string name="time">ALARM</string>
    <string name="time_bg">88:88</string>
    <string name="exchangedetail_01">订单号:</string>
    <string name="exchangedetail_02">请选择需要兑换的商品</string>
    <string name="exchangedetail_03">结束兑换</string>
    <string name="exchangedetail_04">如需结束兑换,请点击结束兑换按钮</string>
    <string name="exchangedetail_05">兑换</string>
    <string name="exchangedetail_06">已全部领取</string>
    <string name="pay_yee_CN">易付宝支付</string>
    <string name="pay_yee_EN">Yeepay</string>
    <string name="dialog_wait_01">N O T I C E</string>
    <string name="dialog_wait_02">暂未开放</string>
    <string name="dialog_wait_03">易付宝支付，即将推出，敬请期待</string>
    <string name="dialog_wait_04"></string>
    <string name="start_bnt">启动制冷</string>
    <string name="stop_bnt">停止</string>
    <string name="yunxing">运行</string>
    <string name="shebei">设备</string>
    <string name="chaowen">超温</string>
    <string name="tingji">停机</string>
    <string name="qidongchaoshi">启动延时</string>
    <string name="zhileng">制冷</string>
    <string name="hengwen">恒温</string>
    <string name="chushang">除霜</string>
    <string name="guzhang">故障</string>
    <string name="yasuoji">压缩机</string>
    <string name="zhengfajifengshan">蒸发机风扇</string>
    <string name="lengningqifengshan">冷凝器风扇</string>
    <string name="chushuangdianchifa">除霜电磁阀</string>
    <string name="xiangti">箱体</string>
    <string name="zhengfaqi">蒸发器</string>
    <string name="lengningqi">冷凝器</string>
    <string name="kaiji_time">开机保护时间（分）</string>
    <string name="zhengfaqi_time">蒸发器风扇关延时（分）</string>
    <string name="zhileng_wendu">制冷温度（°C）</string>
    <string name="zhileng_huicha">制冷回差（°C）</string>
    <string name="huashuang_wendu">化霜滴水时间（分）</string>
    <string name="huashuang_time">化霜间隔（时）</string>
    <string name="lengningqibaojing_wendu">冷凝器高温报警温度（°C）</string>
    <string name="lengningqistar_wendu">冷凝器风扇启动温度（°C）</string>
    <string name="left">-</string>
    <string name="right">+</string>
    <string name="back_setting">设置</string>
    <string name="hot_wendu">制热温度（°C）</string>
    <string name="hot_huicha">制热回差（°C）</string>
<string name="hot_start_bnt">启动制热</string>
<string name="hot">加热</string>
</resources>