<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_price_01"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fragment_shop_currenttype_tv_goodsprice_CN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/shop_info_normal"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_price_02"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_price_03"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <TextView
            android:layout_marginLeft="4dp"
            android:id="@+id/fragment_shop_currenttype_tv_goodsprice_EN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/shop_info_normal"
            android:textSize="8sp" />
    </LinearLayout>

</LinearLayout>