<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paytype_icoffice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      
         <EditText
            android:id="@+id/paytype_icoffice_card_num"
             android:layout_width="1dp"
            android:layout_height="1dp"/>
         
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            
             <include layout="@layout/paytype_tip" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_icoffice_card"
            android:textSize="8sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_icoffice_02"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_icoffice_03"
            android:textSize="8sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/paytype_icoffice" />

    <ImageButton
        android:id="@+id/paytype_icoffice_ibtn_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shop_change_paytype" >
    </ImageButton>
            
</LinearLayout>

        
    </FrameLayout>
    
   

</LinearLayout>